--- a/public/forgetPassword.html
+++ b/public/forgetPassword.html
@@ -6,14 +6,14 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
-		<link rel="stylesheet" type="text/css" href="../css/style.css"/>
-		<link rel="stylesheet" type="text/css" href="../css/alterPassword.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/style.css" />
+		<link rel="stylesheet" type="text/css" href="../css/alterPassword.css" />
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav header">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">忘记密码</h1>
+			<h1 class="mui-title">忘记密码</h1>
 		</header>
 		<div class="mui-content between">
 			<h4>忘记密码</h4>
@@ -28,12 +28,12 @@
 				<span id="cancel">取消</span>
 			</div>
 			<div class="popover_content">
-				<p>sch****@163.com</p>
+				<p></p>
 				<div class="popover_email">
-					<input type="tel" value="" placeholder="请输入邮箱验证码" id="emailCode">
-					<a>发送</a>
+					<input type="text" value="" placeholder="请输入邮箱验证码" id="emailCode">
+					<a id="sendcode">发送</a>
 				</div>
-				<button type="button" class="mui-btn mui-btn-primary cannot newact" id="ensure" url="/public/resetPassword.html">确定</button>
+				<button type="button" class="mui-btn mui-btn-primary cannot" id="ensure">确定</button>
 			</div>
 		</div>
 		<script src="../js/mui.min.js"></script>
@@ -42,8 +42,13 @@
 		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			mui.init()
-			$("#email").keyup(function(){
-				if ($("#email").val() == '') {
+			var szReg = /^[A-Za-z0-9\u4e00-\u9fa5]+@[a-zA-Z0-9_-]+(\.[a-zA-Z0-9_-]+)+$/;
+			var useremail = '';
+			function closePage () {
+				plus.webview.currentWebview().close();
+			}
+			$("#email").keyup(function() {
+				if($("#email").val() == '') {
 					$("#next").removeClass("can");
 					$("#next").addClass("cannot");
 				} else {
@@ -51,12 +56,119 @@
 					$("#next").addClass("can");
 				}
 			})
-			mui.plusReady(function(){
-				$("#next").on("click", function() {
-					mui('.email_code_box').popover('toggle');
-				})
+			mui.plusReady(function() {
 				$("#cancel").on("click", function() {
 					mui('.email_code_box').popover('hide');
+				})
+				$("#next").on("click", function() {
+					if($("#email").val() == "") {
+						mui.toast('邮箱号不能为空');
+						return false;
+					}
+					if(!szReg.test($("#email").val())) {
+						mui.toast('邮箱号格式错误');
+						return false;
+					}
+					mui.showLoading("加载中...", "div");
+					$.ajax({
+						type: "get",
+						url: api + "is_exist/" + $("#email").val(),
+						data: {},
+						async: true,
+						success: function(ret) {
+							mui.hideLoading();
+							if(ret.success) {
+								useremail = ret.data.email;
+								$(".popover_content p").html(useremail.substr(0, 3) + '****' + useremail.substr(-6, 6));
+								mui('.email_code_box').popover('toggle');
+							} else {
+								mui.toast(ret.msg)
+							}
+						},
+						error: function(error) {
+							mui.hideLoading();
+							mui.toast(error.responseJSON.msg);
+						}
+					});
+				})
+				$("#sendcode").on("click", function() {
+					if ($("#sendcode").html() != '发送') {
+						return false;
+					}
+					mui.showLoading("发送中...", "div");
+					$.ajax({
+						type: "post",
+						url: api + "send_code",
+						data: {
+							'email': useremail,
+        					'action': 2
+						},
+						async: true,
+						success: function(ret) {
+							mui.hideLoading();
+							if(ret.success) {
+								mui.toast('发送成功');
+								var time = 120;
+								var empty = null;
+								clearInterval(empty);
+								empty = setInterval(function() {
+									if(time > 1) {
+										time--;
+										$("#sendcode").html(time + 's');
+									} else {
+										$("#sendcode").html('发送');
+										clearInterval(empty);
+									}
+								}, 1000);
+							} else {
+								mui.toast(ret.msg)
+							}
+						},
+						error: function(error) {
+							mui.hideLoading();
+							mui.toast(error.responseJSON.msg);
+						}
+					});
+				})
+				$("#ensure").on("click", function() {
+					if ($("#emailCode").val() == '') {
+						mui.toast('验证码不能为空');
+						return false;
+					}
+					mui.showLoading("验证中...", "div");
+					$.ajax({
+						type: "post",
+						url: api + "verify_code",
+						data: {
+							'email': useremail,
+					        'verifyCode': $("#emailCode").val(),
+					        'action': 2
+						},
+						async: true,
+						success: function(ret) {
+							mui.hideLoading();
+							if(ret.success) {
+								console.log(useremail);
+								mui.openWindow({
+									url: '/public/resetPassword.html',
+									id: '/public/resetPassword.html',
+									extras: {
+										useremail: useremail,
+										ackId: ret.data
+									},
+									waiting: {
+										autoShow: false,
+									}
+								})
+							} else {
+								mui.toast(ret.msg)
+							}
+						},
+						error: function(error) {
+							mui.hideLoading();
+							mui.toast(error.responseJSON.msg);
+						}
+					});
 				})
 			})
 		</script>
