--- a/public/resetPassword.html
+++ b/public/resetPassword.html
@@ -19,10 +19,10 @@
 			<h4>重置密码</h4>
 			<p class="limit">8-20位字符，不可以是纯数字</p>
 			<div class="mui-input-row info">
-				<input type="password" class="mui-input-password" placeholder="请输入密码" id="pass">
+				<input type="password" value="" class="mui-input-password" placeholder="请输入密码" id="pass">
 			</div>
 			<div class="mui-input-row info">
-				<input type="password" class="mui-input-password" placeholder="请再次输入密码" id="ensurePass">
+				<input type="password" value="" class="mui-input-password" placeholder="请再次输入密码" id="ensurePass">
 			</div>
 			<button type="button" class="mui-btn mui-btn-primary cannot" id="reset">重置</button>
 		</div>
@@ -40,6 +40,54 @@
 					$("#reset").removeClass("can");
 			        $("#reset").addClass("cannot");
 				}
+			})
+			mui.plusReady(function() {
+				var self = plus.webview.currentWebview();
+				useremail = self.useremail;
+				ackId = self.ackId;
+				$("#reset").on("click", function() {
+					if ($("#pass").val() == '') {
+						mui.toast('新密码不能为空');
+						return false;
+					}
+					if ($("#ensurePass").val() == '') {
+						mui.toast('请确认密码');
+						return false;
+					}
+					if ($("#pass").val() != $("#ensurePass").val()) {
+						mui.toast('密码不一致');
+						return false;
+					}
+					mui.showLoading("加载中...", "div");
+					$.ajax({
+						type: "put",
+						url: api + "reset_password",
+						data: {
+							'email': useremail,
+					        'password': $("#pass").val(),
+					        'ackId': ackId
+						},
+						async: true,
+						success: function(ret) {
+							mui.hideLoading();
+							if(ret.success) {
+								mui.toast('修改成功');
+								var time = null;
+								clearTimeout(time);
+								time = setTimeout(function() {
+									plus.webview.currentWebview().close();
+									plus.webview.getWebviewById("/public/forgetPassword.html").evalJS("closePage()");
+								}, 1000)
+							} else {
+								mui.toast(ret.msg)
+							}
+						},
+						error: function(error) {
+							mui.hideLoading();
+							mui.toast(error.responseJSON.msg);
+						}
+					});
+				})
 			})
 		</script>
 	</body>
