--- a/public/forgetPassword.html
+++ b/public/forgetPassword.html
@@ -31,7 +31,7 @@
 				<p></p>
 				<div class="popover_email">
 					<input type="text" value="" placeholder="请输入邮箱验证码" id="emailCode">
-					<a id="sendcode">发送</a>
+					<span id="sendcode">发送</span>
 				</div>
 				<button type="button" class="mui-btn mui-btn-primary cannot" id="ensure">确定</button>
 			</div>
