--- a/pages/home.html
+++ b/pages/home.html
@@ -131,16 +131,16 @@
 			};
 
 			mui.init()
-			//预加载详情页
-			var homeDetail = mui.preload({
-				id: "notice.html",
-				url: "../public/notice.html"
-			});
+//			//预加载详情页
+//			var homeDetail = mui.preload({
+//				id: "notice.html",
+//				url: "../public/notice.html"
+//			});
 			//打开详情页
 			function go_detail(num) {
-				mui.fire(homeDetail, "movieID", {
-					id: 123
-				})
+//				mui.fire(homeDetail, "movieID", {
+//					id: 123
+//				})
 				mui.openWindow({
 					id: "notice.html",
 					url: "../public/notice.html",
