--- a/public/notice.html
+++ b/public/notice.html
@@ -41,34 +41,36 @@
 		mui.plusReady(function() {
 			var self = plus.webview.currentWebview();
 			purseIndex = self.purseIndex;
-			loadPostList();
-		});
-		// 获取公告列表
-		function loadPostList() {
-			mui.showLoading("加载中...", "div");
-			$.ajax({
-				type: "get",
-				url: api + "posts",
-				data: {},
-				async: true,
-				success: function(ret) {
-					mui.hideLoading();
-					if(ret.success) {
-						mui.toast('加载成功');
-						postInfo = ret.data.list[purseIndex];
-						$('#title').html(postInfo.title);
-						$('#content').html(postInfo.content);
-						$('#date').html(postInfo.createdAt);
-					} else {
-						mui.toast(ret.msg);
+			loadPosInfo();
+			// 获取公告列表
+			function loadPosInfo() {
+				mui.showLoading("加载中...", "div");
+				$.ajax({
+					type: "get",
+					url: api + "posts",
+					data: {},
+					async: true,
+					success: function(ret) {
+						mui.hideLoading();
+						if(ret.success) {
+							mui.toast('加载成功');
+							console.log("dsfghjk"+purseIndex);
+							postInfo = ret.data.list[purseIndex];
+							console.log(postInfo);
+							$('#title').html(postInfo.title);
+							$('#content').html(postInfo.content);
+							$('#date').html(postInfo.createdAt);
+						} else {
+							mui.toast(ret.msg);
+						}
+					},
+					error: function(error) {
+						mui.hideLoading();
+						mui.toast(error.responseJSON.msg);
 					}
-				},
-				error: function(error) {
-					mui.hideLoading();
-					mui.toast(error.responseJSON.msg);
-				}
-			})
-		};
+				})
+			};
+		});
 	</script>
 </body>
 
