--- a/users/oreManage.html
+++ b/users/oreManage.html
@@ -10,86 +10,85 @@
 		<link rel="stylesheet" type="text/css" href="../css/style.css" />
 		<link rel="stylesheet" type="text/css" href="../css/oreManage.css" />
 	</head>
-	
+
 	<body>
 		<header class="mui-bar mui-bar-nav header">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">矿机管理</h1>
-			<i class="iconfont icon-saoma saoma_btn newact" url="/users/barcode.html"></i>
-			<i class="iconfont icon-shebeiguanli complete_btn" id="manage"></i>
+			<i class="iconfont icon-saoma mui-pull-right saoma_btn newact" url="/users/barcode.html"></i>
 		</header>
 		<div class="mui-content between">
 			<div class="miner_list">
-				<!--<div class="miner online">
-					<div class="title">
-						<p class="name">矿机一</p>
-						<p class="state">在线</p>
+				<div class="miner_box">
+					<div class="miner">
+						<div class="title">
+							<h5 class="name">矿机一</h5>
+							<p class="status stay">正在挖矿</p>
+						</div>
+						<div class="miner_content">
+							<ul class="miner_income">
+								<li>
+									<h6>今日收益（24h）</h6>
+									<p>452138.00<span>DCAR</span></p>
+								</li>
+								<li>
+									<h6>算力值（KH/S）</h6>
+									<p>452138.00<span>DCAR</span></p>
+								</li>
+							</ul>
+							<p class="miner_address">矿机地址<span>wadsfafafafasdaffdddddfafasf</span></p>
+						</div>
+						<div class="miner_footer">
+							<p class="shut_down">
+								<i class="iconfont icon-guanbizhuanhuan"></i>
+								关机
+							</p>
+							<p class="purse">
+								<i class="iconfont icon-qianbao"></i>
+								钱包管理
+							</p>
+						</div>
 					</div>
-					<div class="detail">
-						<div class="state_box">
-							<img src="../img/ore/icon_state1.png" />
-						</div>
-						<div class="miner_word">
-							<p>算力值&nbsp;&nbsp;<span>44077.86</span>KH/S</p>
-							<p>矿机地址 dwsdffsafafagagdgfghdfgd</p>
-						</div>
+					<div class="delete_miner">
+						<i class="iconfont icon-shanchu"></i>
+						<p>删除</p>
 					</div>
 				</div>
-				<div class="miner offline">-->
-					<!--<div class="title">
-						<p class="name">矿机二</p>
-						<p class="state">离线</p>
-					</div>
-					<div class="detail">
-						<div class="state_box">
-							<img src="../img/ore/icon_state0.png" />
+				<div class="miner_box">
+					<div class="miner">
+						<div class="title">
+							<h5 class="name">矿机二</h5>
+							<p class="status stop">停止挖矿</p>
 						</div>
-						<div class="miner_word">
-							<p>算力值&nbsp;&nbsp;<span>44077.86</span>KH/S</p>
-							<p>矿机地址&nbsp;&nbsp;dwsdffsafafagagdgfghdfgd</p>
+						<div class="miner_content">
+							<ul class="miner_income">
+								<li>
+									<h6>今日收益（24h）</h6>
+									<p>452138.00<span>DCAR</span></p>
+								</li>
+								<li>
+									<h6>算力值（KH/S）</h6>
+									<p>452138.00<span>DCAR</span></p>
+								</li>
+							</ul>
+							<p class="miner_address">矿机地址<span>wadsfafafafasdaffdddddfafasf</span></p>
+						</div>
+						<div class="miner_footer">
+							<p class="start_open">
+								<i class="iconfont icon-guanjin"></i>
+								开机
+							</p>
+							<p class="purse">
+								<i class="iconfont icon-qianbao"></i>
+								钱包管理
+							</p>
 						</div>
 					</div>
-				</div>-->
-			</div>
-			<div class="miner_chunk">
-				<ul>
-					<!--<li class="online">
-						<p class="name">矿机一</p>
-						<p class="state">在线</p>
-					</li>
-					<li class="offline">
-						<p class="name">矿机一</p>
-						<p class="state">离线</p>
-					</li>
-					<li class="online">
-						<p class="name">矿机一</p>
-						<p class="state">在线</p>
-					</li>
-					<li class="online">
-						<p class="name">矿机一</p>
-						<p class="state">在线</p>
-					</li>
-					<li class="online">
-						<p class="name">矿机一</p>
-						<p class="state">在线</p>
-					</li>
-					<li class="online">
-						<p class="name">矿机一</p>
-						<p class="state">在线</p>
-					</li>
-					<li class="online">
-						<p class="name">矿机一</p>
-						<p class="state">在线</p>
-					</li>
-					<li class="online">
-						<p class="name">矿机一</p>
-						<p class="state">在线</p>
-					</li>
-					<li class="online">
-						<p class="name">矿机一</p>
-						<p class="state">在线</p>
-					</li>-->
-				</ul>
+					<div class="delete_miner">
+						<i class="iconfont icon-shanchu"></i>
+						<p>删除</p>
+					</div>
+				</div>
 			</div>
 		</div>
 		<script src="../js/mui.min.js"></script>
@@ -97,17 +96,15 @@
 		<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
-			mui.init()
-			$("#manage").on("click", function() {
-				if($("#manage").attr("class").indexOf("icon-shebeiguanli") > -1) {
-					$("#manage").attr("class", "iconfont icon-guanli complete_btn");
-					$(".miner_list").hide();
-					$(".miner_chunk").show();
-				} else {
-					$("#manage").attr("class", "iconfont icon-shebeiguanli complete_btn");
-					$(".miner_list").show();
-					$(".miner_chunk").hide();
-				}
+			$(".miner").on("swipeleft", function() {
+				$(".miner_box").find(".delete_miner").css("right", "-85px")
+				$(".miner_box").find(".miner").css("margin-left", "0")
+				$(this).parent().find(".delete_miner").css("right", "0")
+				$(this).parent().find(".miner").css("margin-left", "-85px")
+			})
+			$(".miner").on("swiperight", function() {
+				$(this).parent().find(".delete_miner").css("right", "-85px")
+				$(this).parent().find(".miner").css("margin-left", "0")
 			})
 		</script>
 	</body>
