chore :alter oreManage

--- a/pages/home.html
+++ b/pages/home.html
@@ -108,9 +108,9 @@
 										'<div class = "mui-media-body">' +
 										'<p class = "list_title">' +
 										'<span>' + t.title + '</span>' +
-										'<span>' + t.createdAt + '</span>' +
+										'<p style="padding-top:8px;">' + t.createdAt + '</p>' +
 										'</p>' +
-										'<p class = "mui-ellipsis">' + t.content + '</p>' +
+//										'<p class = "mui-ellipsis">' + t.content + '</p>' +
 										'</div>' +
 										'</a>' +
 										'</li>' +
