--- a/users/opinion.html
+++ b/users/opinion.html
@@ -20,6 +20,7 @@
 			<button type="button" class="mui-action-back mui-btn mui-btn-primary cannot" id="submit">提交</button>
 		</div>
 		<script src="../js/mui.min.js"></script>
+		<script src="../js/jquery-2.1.1.min.js"></script>
 		<script type="text/javascript">
 			mui.init()
 		</script>
