--- a/users/oreManage.html
+++ b/users/oreManage.html
@@ -18,6 +18,14 @@
 			<i class="iconfont icon-saoma mui-pull-right saoma_btn newact" url="/users/barcode.html"></i>
 		</header>
 		<div class="mui-content between">
+			<div class="mill_top">
+				<p class="first_line">总收益 (24h)</p>
+				<p class="second_line">
+					45155.00
+					<span class="first_line">DCAR</span>
+				</p>
+				<p class="third_line">≈125666.00 CNY</p>
+			</div>
 			<div class="miner_list">
 				<div class="miner_box">
 					<div class="miner">
@@ -39,13 +47,11 @@
 							<p class="miner_address">矿机地址<span>wadsfafafafasdaffdddddfafasf</span></p>
 						</div>
 						<div class="miner_footer">
-							<p class="shut_down">
-								<i class="iconfont icon-guanbizhuanhuan"></i>
-								关机
+							<p class="shut_down open_box">
+								<i class="iconfont icon-guanbizhuanhuan"></i> 关机
 							</p>
 							<p class="purse">
-								<i class="iconfont icon-qianbao"></i>
-								钱包管理
+								<i class="iconfont icon-qianbao"></i> 钱包管理
 							</p>
 						</div>
 					</div>
@@ -74,13 +80,11 @@
 							<p class="miner_address">矿机地址<span>wadsfafafafasdaffdddddfafasf</span></p>
 						</div>
 						<div class="miner_footer">
-							<p class="start_open">
-								<i class="iconfont icon-guanjin"></i>
-								开机
+							<p class="start_open open_box">
+								<i class="iconfont icon-guanjin"></i> 开机
 							</p>
 							<p class="purse">
-								<i class="iconfont icon-qianbao"></i>
-								钱包管理
+								<i class="iconfont icon-qianbao"></i> 钱包管理
 							</p>
 						</div>
 					</div>
@@ -91,11 +95,29 @@
 				</div>
 			</div>
 		</div>
+		<!--开机关机弹框-->
+		<div class="mui-popover alert_box">
+			<p class="alert_title">提示</p>
+			<!--<div class="alert_body">确定要关机吗？确定之后矿机将停止挖矿</div>-->
+			<div class="alert_body">确定要开机吗？确定之后矿机将开始挖矿</div>
+			<ul class="alert_operate">
+				<li class="alert_button">确定</li>
+				<li class="alert_button">取消</li>
+			</ul>
+		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/jquery-2.1.1.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/benben.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
+			mui.plusReady(function() {
+				$('.open_box').click(function() {
+					mui('.alert_box').popover('show');
+				});
+				$(".alert_button").on("click", function() {
+					mui('.alert_box').popover('toggle');
+				});
+			})
 			$(".miner").on("swipeleft", function() {
 				$(".miner_box").find(".delete_miner").css("right", "-85px")
 				$(".miner_box").find(".miner").css("margin-left", "0")
