--- a/pages/mine.html
+++ b/pages/mine.html
@@ -22,12 +22,12 @@
 		</div>
 		<div class="content operation_list">
 			<ul class="list">
-				<li class="newact" url="/users/tradeRecord.html">
+				<li class="newact" onclick="go_detail('tradeRecord')">
 					<i class="iconfont icon-zichan"></i>
 					<p>交易记录</p>
 					<span class="mui-icon mui-icon-arrowright"></span>
 				</li>
-				<li class="newact" url="/users/oreManage.html">
+				<li class="newact" onclick="go_detail('oreManage')">
 					<i class="iconfont icon-shebeiguanli"></i>
 					<p>矿机管理</p>
 					<span class="mui-icon mui-icon-arrowright"></span>
@@ -84,6 +84,26 @@
 				$(".not").hide();
 				$(".already").show();
 				getUserInfo();
+			}
+			// 跳转页面 --交易记录/矿机管理
+			function go_detail(state) {
+				if (store.get("userInfo") == undefined) {
+					$(".not").show();
+					$(".already").hide();
+					mui.toast('您还未登录，请先登录');
+					return false;
+				}
+				if (state == 'tradeRecord') { // 跳转到交易记录
+					mui.openWindow({
+						id: "tradeRecord.html",
+						url: "../users/tradeRecord.html",
+					})
+				} else if (state == 'oreManage') { // 跳转到矿机管理
+					mui.openWindow({
+						id: "oreManage.html",
+						url: "../users/oreManage.html",
+					})
+				}
 			}
 			// 根据用户id获取用户信息
 			function getUserInfo() {
