--- a/users/binders.html
+++ b/users/binders.html
@@ -96,8 +96,8 @@
 				});
 				$("#jumpList").on("tap", function() {
 					plus.webview.currentWebview().close();
-					plus.webview.getWebviewById("/users/oreManage.html").evalJS("loadmillList()");
 					plus.webview.getWebviewById("/users/barcode.html").evalJS("closeBarcode()");
+					plus.webview.getWebviewById("oreManage.html").evalJS("loadmillList()");
 				})
 				$(".fail_btn").on("tap", function (){
 					plus.webview.getWebviewById("/users/barcode.html").evalJS("closeBarcode()");
