--- a/users/oreManage.html
+++ b/users/oreManage.html
@@ -82,12 +82,9 @@
 							</ul>
 							<p class="miner_address">矿机地址<span>wadsfafafafasdaffdddddfafasf</span></p>
 						</div>
-						<div class="miner_footer">
+						<div class="miner_footer_two">
 							<p class="start_open open_box">
 								<i class="iconfont icon-guanjin"></i> 开机
-							</p>
-							<p class="purse">
-								<i class="iconfont icon-qianbao"></i> 钱包管理
 							</p>
 						</div>
 					</div>
@@ -154,14 +151,14 @@
 														'<img src="../img/greenPic.png" alt="" />' +
 														'挖矿中' +
 													'</p>' +
-													'<p class="status" id="staying">' + 
-														'<img src="../img/yellowPic.png" alt="" />' +
-														'空闲中' +
-													'</p>' +
-													'<p class="status" id="closing">' + 
-														'<img src="../img/redPic.png" alt="" />' +
-														'关机' +
-													'</p>' +
+//													'<p class="status" id="staying">' + 
+//														'<img src="../img/yellowPic.png" alt="" />' +
+//														'空闲中' +
+//													'</p>' +
+//													'<p class="status" id="closing">' + 
+//														'<img src="../img/redPic.png" alt="" />' +
+//														'关机' +
+//													'</p>' +
 												'</div>' +
 												'<div class="miner_content">' +
 													'<ul class="miner_income">' +
@@ -184,6 +181,11 @@
 														'<i class="iconfont icon-qianbao"></i>' + '添加钱包' +
 													'</p>' +
 												'</div>' +
+//												'<div class="miner_footer_two">'+
+//													'<p class="start_open open_box">'+
+//														'<i class="iconfont icon-guanjin"></i>' + '开机' +
+//													'</p>'+
+//												'</div>'+
 											'</div>' +
 											'<div class="delete_miner">' +
 												'<i class="iconfont icon-shanchu"></i>' +
